added alt text for notices and labels

--- a/templates/partials/_notices.html
+++ b/templates/partials/_notices.html
@@ -254,7 +254,7 @@
             </div>
         </div>
         <div class="flex-this">
-            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-overall-notice.png' %}" width="119px" alt=""></div>
+            <div><img loading="lazy" class="pointer-event-none" src="{% static 'images/notices/collections-care/cc-overall-notice.png' %}" width="119px" alt="Icon for Collection Care Notice. Abstract design with the letter L and C in the dotted black circle."></div>
             <div class="flex-this column margin-left-16">
                 <div class="w-80">
                     <p>
