--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -126,7 +126,7 @@
     {% for bclabel in bclabels %}
         <div id="open-div-{{ bclabel.unique_id }}" style="height: 0px; overflow: hidden;" class="div-toggle">
             <div class="full-label-card flex-this">
-                <div class="margin-right-16"><img src="{{bclabel.img_url}}" class="label-large pointer-event-none"></div>
+                <div class="margin-right-16"><img src="{{bclabel.img_url}}" class="label-large pointer-event-none" alt="{{ bclabel.name }} Label"></div>
                 <div>
                     <div class="flex-this space-between">
                         <div><h3 class="no-top-margin">{{ bclabel.name }}</h3></div>
@@ -185,7 +185,7 @@
         <div id="open-div-{{ tklabel.unique_id }}" style="height: 0px; overflow: hidden;" class="div-toggle">
             <div class="full-label-card flex-this">
                 <div class="margin-right-16">
-                    <img src="{{ tklabel.img_url }}" class="label-large pointer-event-none">
+                    <img src="{{ tklabel.img_url }}" class="label-large  pointer-event-none" alt="{{ tklabel.name }} Label">
                 </div>
                 <div>
                     <div class="flex-this space-between">
@@ -337,22 +337,22 @@
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
 
                         <div id="tklabel-expanded-img-tka" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tka' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tka' %}" class="default-label-img pointer-event-none" alt="TK Attribution (TK A) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkcl" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcl' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcl' %}" class="default-label-img pointer-event-none" alt="TK Clan (TK CL) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkf" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkf' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkf' %}" class="default-label-img pointer-event-none" alt="TK Family (TK F) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkmc" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmc' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmc' %}" class="default-label-img pointer-event-none" alt="TK Multiple Communities (TK MC) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkcv" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcv' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcv' %}" class="default-label-img pointer-event-none" alt="TK Community Voice (TK CV) Label ">
                         </div>
                         <div id="tklabel-expanded-img-tkcr" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcr' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcr' %}" class="default-label-img pointer-event-none" alt="TK Creative (TK CR) Label">
                         </div>
                         
                         <!-- <div><button class="primary-btn green-btn primary-btn green-btn-default-size">Listen <i class="fa fa-volume-up"></i></button></div> -->
@@ -454,31 +454,31 @@
                 <div class="flex-this">
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
                         <div id="tklabel-expanded-img-tknv" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tknv' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tknv' %}" class="default-label-img pointer-event-none" alt="TK Non-Verified (TK NV) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkv" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkv' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkv' %}" class="default-label-img pointer-event-none" alt="TK Verified (TK V) Label">
                         </div>
                         <div id="tklabel-expanded-img-tks" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tks' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tks' %}" class="default-label-img pointer-event-none" alt="TK Seasonal (TK S) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkwg" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkwg' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkwg' %}" class="default-label-img pointer-event-none" alt="TK Weomen General (TK WG) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkmg" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmg' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmg' %}" class="default-label-img pointer-event-none" alt="TK Men General (TK MG) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkmr" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmr' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkmr' %}" class="default-label-img pointer-event-none" alt="TK Men Restricted (TK MR) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkwr" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkwr' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkwr' %}" class="default-label-img pointer-event-none" alt="TK Women Restricted (TK WR) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkcs" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcs' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcs' %}" class="default-label-img pointer-event-none" alt="TK Culturally Sensitive (TK CS) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkss" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkss' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkss' %}" class="default-label-img pointer-event-none" alt="TK Secret Sacred (TK SS) Label">
                         </div>
 
                         <!-- <div><button class="primary-btn green-btn primary-btn green-btn-default-size">Listen <i class="fa fa-volume-up"></i></button></div> -->
@@ -562,19 +562,19 @@
                 <div class="flex-this">
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
                         <div id="tklabel-expanded-img-tko" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tko' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tko' %}" class="default-label-img pointer-event-none" alt="TK Outreach (TK O) Label">
                         </div>
                         <div id="tklabel-expanded-img-tknc" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tknc' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tknc' %}" class="default-label-img pointer-event-none" alt="TK Non-Commercial (TK NC) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkoc" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkoc' %}" class="default-label-img pointer-event-none">
-                        </div>
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkoc' %}" class="default-label-img  pointer-event-none" alt="TK Open to Commercialization (TK OC) Label">
+                        </div> 
                         <div id="tklabel-expanded-img-tkco" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkco' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkco' %}" class="default-label-img  pointer-event-none" alt="TK Community Use Only (TK CO) Label">
                         </div>
                         <div id="tklabel-expanded-img-tkcb" class="tk-img-div hide">
-                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcb' %}" class="default-label-img pointer-event-none">
+                            <img loading="lazy" src="{% get_tklabel_img_url 'tkcb' %}" class="default-label-img pointer-event-none" alt="TK Open to Collaboration (TK CB) Label">
                         </div>
 
                         <!-- <div><button class="primary-btn green-btn primary-btn green-btn-default-size">Listen <i class="fa fa-volume-up"></i></button></div> -->
@@ -677,15 +677,15 @@
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
         
                         <div id="bclabel-expanded-img-bcp" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcp' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcp' %}" alt="BC Provenance (BC P) Label">
                         </div>
         
                         <div id="bclabel-expanded-img-bcmc" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcmc' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcmc' %}"  alt="BC Multiple Communities (BC MC) Label">
                         </div>
         
                         <div id="bclabel-expanded-img-bccl" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccl' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccl' %}"  alt="BC Clan (BC CL) Label">
                         </div>
         
                         <!-- <div><button class="primary-btn green-btn primary-btn green-btn-default-size">Listen <i class="fa fa-volume-up"></i></button></div> -->
@@ -751,11 +751,11 @@
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
         
                         <div id="bclabel-expanded-img-bccv" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccv' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccv' %}" alt="BC Consent Verified (BC CV) Label">
                         </div>
         
                         <div id="bclabel-expanded-img-bccnv" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccnv' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccnv' %}" alt="BC Consent Non-Verified (BC CNV) Label">
                         </div>
         
                         <!-- <div><button class="primary-btn green-btn primary-btn green-btn-default-size">Listen <i class="fa fa-volume-up"></i></button></div> -->
@@ -840,23 +840,23 @@
                     <div class="w-20 margin-right-1 margin-top-1" style="text-align: right;">
 
                         <div id="bclabel-expanded-img-bcr" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcr' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcr' %}" alt="BC Research Use (BC R) Label">
                         </div>
 
                         <div id="bclabel-expanded-img-bccb" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccb' %}">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bccb' %}" alt="BC Open to Collaboration (BC CB) Label">
                         </div>
 
                         <div id="bclabel-expanded-img-bcoc" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcoc' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcoc' %}" alt="BC Open to Commercialization (BC OC) Label">
                         </div>
 
                         <div id="bclabel-expanded-img-bco" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bco' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bco' %}" alt="BC Outreach (BC O) Label">
                         </div>
 
                         <div id="bclabel-expanded-img-bcnc" class="bc-img-div hide">
-                            <img class="pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcnc' %}" class="default-label-img">
+                            <img class="default-label-img pointer-event-none" loading="lazy" src="{% get_bclabel_img_url 'bcnc' %}" alt="BC Non-Commercial (BC NC) Label">
                         </div>
                     </div>
 
