--- a/templates/partials/infocards/_institution-card.html
+++ b/templates/partials/infocards/_institution-card.html
@@ -35,7 +35,7 @@
                     </div>
                     {% if institution.otc_institution_url.all %}
                         <div class="flex-this flex-end">
-                            <img class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px">
+                            <img class="pointer-event-none" src="{% static 'images/notices/ci-open-to-collaborate.png' %}" width="60px" alt="black square with white rectangle being held by two hands in the middle">
                         </div>
                     {% endif %}
                 {% endif %}
