--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="dashcard-btn-container">
-            <div class="margin-left-16">
+            <div class="margin-left-16 flex-this gap-1">
                 {% if '/registry/' in request.path %}
                     <div class="margin-bottom-16">
                         <a 
@@ -39,22 +39,25 @@
                     {% endif %}
                 {% endif %}
 
-                {% include 'snippets/notifications.html' with scope=researcher.id %}
-                <br>
-
-                {% if '/dashboard/' in request.path %}
+                <div class="margin-right-8">
+                    {% if '/dashboard/' in request.path %}
                     {% if researcher.get_projects %}
-                        <a 
-                            class="primary-btn action-btn"
-                            href="{% url 'researcher-projects' researcher.id %}"
-                        >View account</a>
+                    <a 
+                    class="primary-btn action-btn"
+                    href="{% url 'researcher-projects' researcher.id %}"
+                    >View account</a>
                     {% else %}
-                        <a 
-                            class="primary-btn action-btn"
-                            href="{% url 'researcher-notices' researcher.id %}"
-                        >View account</a>
+                    <a 
+                    class="primary-btn action-btn"
+                    href="{% url 'researcher-notices' researcher.id %}"
+                    >View account</a>
                     {% endif %}
-                {% endif %}
+                    {% endif %}
+                </div>
+                <!-- Notification -->
+                {% include 'snippets/notifications.html' with scope=researcher.id %}
+                <!-- Settings -->
+                <div><a href="{% url 'update-researcher' researcher.id %}" class="border-raduis50  darkteal-text primary-btn white-btn"><i class="no-margin fa fa-cog" aria-hidden="true"></i></a></div>
             </div>
         </div>
 
